@@ -25,45 +25,67 @@ echo start to bootstrap GnuCOBOL
 ret=0
 # get path to GnuCOBOL main directory
 if test "$0" = "./bootstrap"; then
-	MAINPATH=..
+  MAINPATH=..
 else
-	MAINPATH=$(dirname $(readlink -f "$0"))/..
+  MAINPATH=$(dirname $(readlink -f "$0"))/..
+fi
+if test ! -f $MAINPATH/build_aux/bootstrap; then
+  echo; echo ERROR - cannot set main directory - aborting bootstrap && exit 1
 fi
 
 echo
 if test ! -f $MAINPATH/tarstamp.h; then
-	echo creating tarstamp.h...
-	echo "#define COB_TAR_DATE \"`date -u +'%b %d %Y %T'` UTC\"" > $MAINPATH/tarstamp.h
-	echo "#define COB_NUM_TAR_DATE `date -u +'%Y%m%d'`" >> $MAINPATH/tarstamp.h
-	echo "#define COB_NUM_TAR_TIME `date -u +'%H%M%S'`" >> $MAINPATH/tarstamp.h
+  echo creating tarstamp.h...
+  echo "#define COB_TAR_DATE    \"`LC_ALL=C date -u +'%b %d %Y %T'` UTC\"" > $MAINPATH/tarstamp.h
+  echo "#define COB_NUM_TAR_DATE ` LC_ALL=C date -u +'%Y%m%d'`"           >> $MAINPATH/tarstamp.h
+  echo "#define COB_NUM_TAR_TIME ` LC_ALL=C date -u +'%H%M%S'`"           >> $MAINPATH/tarstamp.h
 else
-	echo tarstamp.h exists already
+  echo tarstamp.h exists already
 fi
 
 echo; echo ensure that we have executable scripts...
-chmod +x $MAINPATH/build_aux/compile
-chmod +x $MAINPATH/build_aux/config.guess
-chmod +x $MAINPATH/build_aux/config.rpath
-chmod +x $MAINPATH/build_aux/config.sub
-chmod +x $MAINPATH/build_aux/depcomp
-chmod +x $MAINPATH/build_aux/install-sh
-chmod +x $MAINPATH/build_aux/ltmain.sh
-chmod +x $MAINPATH/build_aux/mdate-sh
-chmod +x $MAINPATH/build_aux/missing
-chmod +x $MAINPATH/build_aux/mkinstalldirs
-chmod +x $MAINPATH/build_aux/ylwrap
-chmod +x $MAINPATH/doc/cobcinfo.sh
-chmod +x $MAINPATH/po/update_linguas.sh
-chmod +x $MAINPATH/tests/listings-sed.sh
-if test -f $MAINPATH/create_win_dist.sh; then
-	chmod +x $MAINPATH/create_win_dist.sh
-fi
+scripts="compile config.guess config.rpath config.sub depcomp install-sh ltmain.sh mdate-sh missing mkinstalldirs ylwrap"
+for file in $scripts ; do
+  if test -f $MAINPATH/build_aux/$file; then
+    chmod +x $MAINPATH/build_aux/$file
+  else
+    echo "WARNING, file $MAINPATH/build-aux/$file is missing."
+  fi
+done
+
+scripts="doc/cobcinfo.sh po/update_linguas.sh tests/listings-sed.sh create_win_dist.sh"
+for file in $scripts ; do
+  if test -f $MAINPATH/$file; then
+    chmod +x $MAINPATH/$file
+  else
+    if test ! $file = "create_win_dist.sh"; then
+      echo "WARNING, file $MAINPATH/$file is missing."
+    fi
+  fi
+done
 
 echo; echo running autoreconf...
-#autoreconf -I m4 --install --force		# changing build_aux scripts
+
+# changing build_aux scripts at large:
+#autoreconf -I m4 --install --force $MAINPATH
+
+# changing files possibly needed for new systems:
+#config_file_url="https://git.savannah.gnu.org/gitweb/?p=gnulib.git;a=blob_plain;f=build-aux"
+#for file in config.guess config.sub; do
+#  echo "$0: getting $file..."
+#  wget -q --timeout=5 -O $MAINPATH/build_aux/$file.tmp "${config_file_url}/${file};hb=HEAD" \
+#    && mv $MAINPATH/build_aux/$file.tmp $MAINPATH/build_aux/$file \
+#    && chmod a+x $MAINPATH/build_aux/$file
+#  retval=$?
+#  rm -f $MAINPATH/build_aux/$file.tmp
+#  test $retval -eq 0 # || exit $retval
+#done
+
+# ensure the configure and Makefile parts are up-to-date:
 autoreconf -I m4 --verbose --force $MAINPATH; ret=$?
+
 if test $ret -ne 0; then
-	echo; echo ERROR - aborting bootstrap && exit $ret
+  echo; echo ERROR, autoreconf returned $ret - aborting bootstrap && exit $ret
 fi
 
 echo; echo bootstrap is finished
